<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/viewDataScreen"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

<!-- Header aligned to top -->
<LinearLayout
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/toolbar"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/AwardsFoundTitle"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/awardsFoundTxtView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="30dp">

        <TextView
            android:id="@+id/columnSource"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/awardSourceTitle"
            android:textAlignment="center"
            android:textStyle="bold" android:focusable="true"/>

        <TextView
            android:id="@+id/columnType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/AwardTypeTitle"
            android:textAlignment="center"
            android:textStyle="bold" android:focusable="true"/>

        <TextView
            android:id="@+id/columnName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:width="200dp"
            android:clickable="true"
            android:text="@string/AwardNameTitle"
            android:textAlignment="center"
            android:textStyle="bold" android:focusable="true"/>

        <TextView
            android:id="@+id/columnAmount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/AwardAmountTitle"
            android:textAlignment="center"
            android:textStyle="bold" android:focusable="true"/>

    </LinearLayout>

</LinearLayout>

<!-- Footer aligned to bottom -->
<RelativeLayout
    android:id="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:gravity="center">

    <Button
        android:id="@+id/saveAwardsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveAwardsText" />

</RelativeLayout>

<!-- Scrollable Item below header and above footer -->


<ListView
    android:id="@+id/lv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/footer"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@id/header"
    android:layout_centerVertical="true"
    android:choiceMode="multipleChoice" />



</RelativeLayout>

<include layout="@layout/navigation"/>

</android.support.v4.widget.DrawerLayout>